Bug 27693 - Shouldn't pull location from PEP node
Summary: Shouldn't pull location from PEP node
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://git.collabora.co.uk/?p=user/wj...
Whiteboard: r+
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-16 07:10 UTC by Guillaume Desmottes
Modified: 2011-02-18 06:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Guillaume Desmottes 2010-04-16 07:10:20 UTC
<cassidy> wjt, so, pubsub/PEP don't have any more secret to you right? IIRC when connecting, servers are supposed to set you the latest item of each PEP node you are interested in (+notify in your caps). So, any reason why Gabble is doing one request per contact passed to GetLocations? If there is a location, we should already have received, no ?
<cassidy> iirc, ejabberd used to have this wrong but that seems to work fine now
<wjt> cassidy: yep, i think that's true
<sjoerd> I'd be in favour of removing that bit
<sjoerd> It also pokes too many people (like contacts in a muc that don't have that cap in the first place)


This should maybe fixed for other PEP nodes such as nick.
Comment 1 Will Thompson 2011-02-07 03:03:20 UTC
Here is a branch which removes the polling from GetLocations, and adds RequestLocation based on the same code, which is mentioned on bug 31218.
Comment 2 Guillaume Desmottes 2011-02-18 05:49:44 UTC
Looks good. Did you check if we don't pull any other node such as the nick?


http://git.collabora.co.uk/?p=user/wjt/telepathy-gabble-wjt.git;a=commitdiff;h=e979d5f0cafe75f6a7f164b01779c398d8c1e80d
's commit message reminded me about something. I'm still thinking that PEP servers should automatically give us all the latest nodes when we add a +notify capability. Or that at least we should have some easy way to get them.
IIRC, we already raised that on the pubsub ML but that didn't go very far. Maybe you could use your brand new XMPP hat to try to move things forward?
Comment 3 Will Thompson 2011-02-18 06:04:57 UTC
(In reply to comment #2)
> Looks good. Did you check if we don't pull any other node such as the nick?

We do still poll for the nick in some situations. Besides that … the OLPC code polls. I find it hard to care.

I'll file a bug about porting the nickname code to WockyPepService and removing the polling.

> http://git.collabora.co.uk/?p=user/wjt/telepathy-gabble-wjt.git;a=commitdiff;h=e979d5f0cafe75f6a7f164b01779c398d8c1e80d
> 's commit message reminded me about something. I'm still thinking that PEP
> servers should automatically give us all the latest nodes when we add a +notify
> capability. Or that at least we should have some easy way to get them.
> IIRC, we already raised that on the pubsub ML but that didn't go very far.
> Maybe you could use your brand new XMPP hat to try to move things forward?

Prosody at least does the right thing about pushing the latest nodes to us when we add +notify; I think M-Link does too. IIRC ejabberd was the hold-out. I think this is something to follow up when fixing bug 31218, really.
Comment 4 Will Thompson 2011-02-18 06:22:27 UTC
Merged, will be in 0.11.8. Thanks for the review!

(In reply to comment #3)
> I'll file a bug about porting the nickname code to WockyPepService and removing
> the polling.

bug 34447


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.